# reg-net-llm

./: .gitignore  LICENSE.md  README.md  cxg.ipynb  discard.ipynb  env.yml  generate_cache_data.sh  init.sh  install_env.sh  job.sh  pilot_data_dirs.txt  pilotdata_aracne_1024_outdirs.csv  pilotdata_aracne_2048_outdirs.csv  pilotdata_aracne_4096_outdirs.csv  pyproject.toml  run.sh  run_finetune.sh  setup.py  submit_datapp.sh  submit_modelrun.sh  submit_multinode_training.sh  submit_run.sh  sync_data.sh
embeddings/: README.md  benchmark.py  benchmark.sh  benchmark_classification.sh  embedding.sh  embedding_human_immune.sh  geneformer_embedding.py  scfoundation_embedding.py  scglm_embedding.py  scgpt_embedding.py  utils.py
notebooks/: GREmLN_Tutorial.ipynb  benchmark_graph_tasks.ipynb  effect.json  fine_tuning_graph_tasks.ipynb  hPanreas.ipynb  infer_networks.ipynb  infer_networks_mye.ipynb  post_training.ipynb  preprocess_cancer_samples.qmd  preprocessing.ipynb  regulators.ipynb  replogle_gene_selection.ipynb  restore.ipynb  test_GNN_PPI.ipynb  test_GNN_simulation.ipynb  test_GNNs.ipynb  test_data_and_attn.ipynb  test_data_utils.ipynb
scGraphLLM/: GNN_modules.py  LLM_modules.py  MLP_modules.py  __init__.py  _globals.py  benchmark.py  cell_types.py  config.py  data.py  data_master.py  embedding.py  eval.py  eval_config.py  flash_transformer.py  graph_op.py  infer_graph.py  inference.py  model.py  models.py  modules.py  network.py  preprocess.py  preprocess_cellxgene.py  preprocess_scORT.py  run_fine_tuning.py  (+9 more)
scGraphLLM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+106 files in other folders)
